--- a/components/ResponsiveAppBar.css
+++ b/components/ResponsiveAppBar.css
@@ -19,7 +19,7 @@
     display: block;
 }
 .sidebar-toggle {
-    position: absolute;
+    position: fixed;
     top: 10px;
     left: 10px;
     padding: 10px;
