--- a/src/pages/admin/InventoryPage.css
+++ b/src/pages/admin/InventoryPage.css
@@ -21,37 +21,38 @@ td:last-child {
   border-top-right-radius: 10px; 
 }
 .table-container {
-  flex-grow: 1;
-  overflow-x: auto;
-  overflow-y: auto;
-  border: 0px solid;
   width: 100vw;
-  height: 75vh;
+  height: 100vh;
+  top: 0;
 }
 
 .table thead th {
-  background-color: purple;
+  background-color: #9F4DF0;
   color: white;
   font-family: 'Arial', sans-serif;
 }
 
 .table {
-  font-family: 'Arial', sans-serif; 
+  font-weight: bold;
+  font-family: 'Allerta';
 }
 
 .div-search {
-  background-color: purple;
+  background-color: #9F4DF0;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 6.5vh;
+  top: 0;
+  margin-bottom: 0;
 }
 
 .div-search input[type="search"] {
   margin: 10px;
   padding: 5px;
   width: 350px;
-  background-color: rgb(205, 154, 205);
+  background-color: #E7D3FB;
   color: white;
   border-left-style: solid;
   border-top-left-radius: 10px; 
@@ -60,4 +61,31 @@ td:last-child {
   border-top-right-radius: 10px; 
   outline: none;
   color: black;
+  font-weight: bold;
+  font-family: 'Allerta';
+}
+
+.btnAdd{
+  background-color: #801FE1;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 10px;
+  font-size: 16px;
+  font-family: 'Arial', sans-serif;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+  font-weight: bold;
+  font-family: 'Allerta';
+}
+
+.btnAdd:hover {
+  background-color: #E7D3FB; /* Cambia esto al color que prefieras */
+  cursor: pointer;
+}
+
+.notificacion-img {
+  cursor: pointer;
+  transition: filter 0.3s ease;
 }
