Input number ya no muestra flechas y arreglado el popup de insertar producto y el de insertar inventario

--- a/components/PopUpCompra.css
+++ b/components/PopUpCompra.css
@@ -43,9 +43,12 @@
     margin-bottom: 20px;
 }
 
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
-input[type=number] { -moz-appearance:textfield; }
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
