--- a/components/PopUpInsert.css
+++ b/components/PopUpInsert.css
@@ -9,12 +9,15 @@
     top: 0;
     left: 0;
     width: 100%;
-    min-height: 100%;
+    max-height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgba(79, 79, 79, 0.7);
     z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .modal-content {
@@ -42,9 +45,12 @@
     margin-bottom: 20px;
 }
 
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
-input[type=number] { -moz-appearance:textfield; }
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
