--- a/components/PopUpInventory.css
+++ b/components/PopUpInventory.css
@@ -51,3 +51,13 @@
   font-weight: 400;
   margin-bottom: 20px;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
