--- a/components/PopUpUpdateInventory.css
+++ b/components/PopUpUpdateInventory.css
@@ -27,7 +27,7 @@
 }
 
 .modal-content {
-  width: 95vw; /* Aumenta el ancho del contenido del modal */
+  width: 58vw; /* Aumenta el ancho del contenido del modal */
   height: auto;
   padding: 10px;
   border-radius: 10px;
@@ -69,4 +69,13 @@
 .button-container {
   display: flex;
   justify-content: flex-start;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
 }
