--- a/components/ProductList.css
+++ b/components/ProductList.css
@@ -103,3 +103,13 @@
   margin-left: 0.5em; 
 }
 
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
